GatewayService/Gateway/manifest/kubernetes-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayservice
  labels:
    app: gatewayservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayservice
  template:
    metadata:
      labels:
        app: gatewayservice
    spec:
      containers:
      - name: gatewayservice
        image: personateam/gatewayservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
spec:
  selector:
    app: gatewayservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewayservice
spec:
  rules:
  - http:
      paths:
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: gatewayservice
            port:
              number: 8080
